--- a/submit/package.json
+++ b/submit/package.json
@@ -8,13 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
+    "@tiptap/vue-2": "^2.0.0-beta.77",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "tiptap": "^1.32.2",
+    "tiptap-extensions": "^1.35.2",
+    "tiptap-vuetify": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
